2004-10-05  Angus Leeming  <angus.leeming@btopenworld.com>

	* xforms.spec.in: Updating SO_VERSION revealed a flaw in the logic
	that tries to use this variable to define some missing
	symbolic links. The 'post' and 'postun' scripts have been rewritten
	to work once more.

	* lib/flinternal.h: move FL_NoColor...
	* lib/include/Basic.h: here.

	* lib/forms.c (do_interaction_step): prevent potential crash
	caused by invoking fl_get_winsize with a width as the first
	argument rather than a window ID.

	* NEWS: add some highlights post 1.0.90.

2004-10-05  Angus Leeming  <angus.leeming@btopenworld.com>

	* configure.ac (SO_VERSION): updated to "2:0:1" in preparation
	for the xforms 1.1 release.

2004-10-06  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/textbox.c (fl_set_textbox_xoffset): don't ignore a
	request to reset the offset if the manipulated value is less
	than zero. Instead, reset it to zero and proceed.

	* lib/browser.c (get_geometry): reset the horizontal offset to
	zero if the horizontal scrollbar is turned off. (Bug #3205.)

2004-07-28  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/forms.c (fl_prepare_form_window): correct typo in
	error message.

2004-06-04  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/fonts.c (fl_try_get_font_struct): change an error message to
	an informational one as the function is often used to test
	whether a font is loadable or not.

2004-06-03  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/Makefile.am (EXTRA_DIST): distribute dirent_vms.h and
	vms_readdir.c.

2004-06-01  Duncan Simpson  <dps@simpson.demon.co.uk>

	* fdesign/fd_printC.c (build_fname): re-write using fl_snprintf
	as a simpler and safer replacement for strncat and strncpy.

2004-05-27  Angus Leeming  <angus.leeming@btopenworld.com>

	* fdesign/fd_printC.c (build_fname): if no output_dir is specified,
	then output files in the current directory.

2004-05-27  Angus Leeming  <angus.leeming@btopenworld.com>
